--- a/GeoAddin/GeoAddin.csproj
+++ b/GeoAddin/GeoAddin.csproj
@@ -72,7 +72,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ModifyElements.cs" />
     <Compile Include="Openings_Commands\ElementSelection.cs" />
     <Compile Include="Openings_Commands\OpeningGenerating.cs" />
     <Compile Include="Class.cs" />
@@ -94,9 +93,7 @@
     <Compile Include="AR_Windows\RoomGenWindow.xaml.cs">
       <DependentUpon>RoomGenWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Openings_Windows\OpeningWin_ElementSelection.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Openings_Windows\OpeningWin_ElementSelection.cs" />
     <Compile Include="Openings_Windows\OpeningWin_ElementSelection.Designer.cs">
       <DependentUpon>OpeningWin_ElementSelection.cs</DependentUpon>
     </Compile>
